--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -63,6 +63,7 @@
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
     <string name="msg_restart">Programą reikia perkrauti</string>
     <string name="msg_register">Prašome užregistruoti savo įrenginį</string>
+    <string name="msg_email">Please enter your e-mail address:</string>
     <string name="msg_registered">Patikrinkite savo el. paštą, kad aktyvuoti savo prietaisą</string>
     <string name="msg_service">Atnaujinimo paslauga veikia</string>
     <string name="msg_migrating" formatted="false">Migruojama %s</string>
