--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -63,6 +63,7 @@
     <string name="msg_random_boot">Palit-palitan ang mga paghihigpit sa unang paggamit</string>
     <string name="msg_restart">Kailangan paumpisahin muli ang Application</string>
     <string name="msg_register">Please register your device</string>
+    <string name="msg_email">Please enter your e-mail address:</string>
     <string name="msg_registered">Check your e-mail to activate your device</string>
     <string name="msg_service">Update service running</string>
     <string name="msg_migrating" formatted="false">Migrating %s</string>
