--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -63,7 +63,7 @@
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
     <string name="msg_restart">Programą reikia perkrauti</string>
     <string name="msg_register">Prašome užregistruoti savo įrenginį</string>
-    <string name="msg_email">Please enter your e-mail address:</string>
+    <string name="msg_email">Prašome įvesti savo el. pašto adresą:</string>
     <string name="msg_registered">Patikrinkite savo el. paštą, kad aktyvuoti savo prietaisą</string>
     <string name="msg_service">Atnaujinimo paslauga veikia</string>
     <string name="msg_migrating" formatted="false">Migruojama %s</string>
@@ -103,7 +103,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_fpermission">Aktyvūs leidimai</string>
     <string name="title_frestricted">Riboti leidimai</string>
     <string name="title_fuser">Vartotojo programos</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">Filtruoti pagal reikalavimą</string>
     <string name="title_fsystem">Sistemos programos</string>
     <string name="title_fnot">Neriboti</string>
     <string name="title_sname">Pagal pavadinimą</string>
