--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -2,10 +2,10 @@
 
     <string name="app_notxposed" formatted="false">Xposed Framework Version %d+ ist nicht installiert</string>
     <string name="app_notenabled">XPrivacy ist im Xposed Installer nicht aktiviert</string>
-    <string name="app_wrongandroid">Nur ab Android-Version 4.0+</string>
+    <string name="app_wrongandroid">Nur ab Android-Version 4.0.3+</string>
     <string name="app_incompatible" formatted="false">XPrivacy ist mit %s nicht kompatibel</string>
     <string name="app_version" formatted="false">XPrivacy Version: %s (%d)</string>
-    <string name="app_description">The ultimate privacy manager</string>
+    <string name="app_description">Der ultimative Privacy Manager</string>
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Aktivitätslog</string>
@@ -63,7 +63,7 @@
     <string name="msg_random_boot">Zufallswerte bei Geräteneustart erzeugen</string>
     <string name="msg_restart">App-Neustart erforderlich</string>
     <string name="msg_register">Bitte registrieren Sie ihr Gerät</string>
-    <string name="msg_email">Bitte geben Sie Ihre E-Mail Adresse ein:</string>
+    <string name="msg_email">Bitte tragen Sie Ihre E-Mail Adresse ein:</string>
     <string name="msg_registered">Überprüfen Sie ihre E-Mails um Ihr Gerät zu aktivieren</string>
     <string name="msg_service">Update Dienst läuft</string>
     <string name="msg_migrating" formatted="false">Migriere %s</string>
@@ -103,7 +103,7 @@
     <string name="title_fpermission">Berechtigungen</string>
     <string name="title_frestricted">Beschränkungen</string>
     <string name="title_fuser">Nach Benutzer-Apps filtern</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">Nach "Beschränkung nach Aufforderung" filtern</string>
     <string name="title_fsystem">Nach System-Apps filtern</string>
     <string name="title_fnot">Negieren</string>
     <string name="title_sname">nach Name</string>
@@ -118,8 +118,8 @@
     <string name="title_parameters">Parameter:</string>
     <string name="title_applycat">Auf die gesamte Kategorie anwenden</string>
     <string name="title_once">Nur einmal für %1$s Sekunden</string>
-    <string name="title_allow">Erlauben</string>
-    <string name="title_deny">Ablehnen</string>
+    <string name="title_allow">Zulassen</string>
+    <string name="title_deny">Blockieren</string>
     <string name="title_pleasesubmit">Bitte geben Sie Ihre Einstellungen der Beschränkungen weiter um anderen zu helfen</string>
     <string name="settings_serial">Seriennummer</string>
     <string name="settings_lat">Breitengrad</string>
@@ -137,7 +137,7 @@
     <string name="settings_general">Allgemein</string>
     <string name="settings_fake_data">Daten manipulieren</string>
     <string name="settings_notify">Update-Benachrichtigungen</string>
-    <string name="settings_ondemand">Beschränkungen nach Aufforderung setzen</string>
+    <string name="settings_ondemand">Beschränkungen nach Aufforderung festlegen</string>
     <string name="settings_log">Debug-Log (erfordert Geräteneustart)</string>
     <string name="settings_expert">Experten-Modus</string>
     <string name="settings_dangerous">Beschränke "bedenkliche" Funktionen</string>
@@ -147,7 +147,7 @@
     <string name="settings_syscomponents">Beschränke Systemkomponenten (Android) (Neustart erforderlich)</string>
     <string name="settings_usagedata">Zeige App Nutzungsdaten (Neustart erforderlich)</string>
     <string name="help_longpress">Für Auswahl dauerhaft Name drücken</string>
-    <string name="help_ondemand">Setzen der Beschränkungen nach Aufforderung</string>
+    <string name="help_ondemand">Festlegen der Beschränkungen nach Aufforderung</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
