--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -63,7 +63,7 @@
     <string name="msg_random_boot">重新啟動後進行亂數</string>
     <string name="msg_restart">需要重新啓動程式</string>
     <string name="msg_register">請先註冊您的 Android 裝置</string>
-    <string name="msg_email">Please enter your e-mail address:</string>
+    <string name="msg_email">請輸入E-mail:</string>
     <string name="msg_registered">請到信箱驗證啟用您的 Android 裝置</string>
     <string name="msg_service">更新服務執行中</string>
     <string name="msg_migrating" formatted="false">正在移植 %s</string>
@@ -90,7 +90,7 @@
     <string name="restrict_network">網路資訊 (IP, MAC, DHCP)</string>
     <string name="restrict_notifications">通知</string>
     <string name="restrict_overlay">畫面混成 (Overlay)</string>
-    <string name="restrict_phone">手機資訊 (SIM卡, 3G, 通話記錄)</string>
+    <string name="restrict_phone">手機資訊 (SIM卡, 通話記錄)</string>
     <string name="restrict_sensors">感應器 (陀螺儀, 指南針)</string>
     <string name="restrict_storage">儲存空間 (媒體檔案, SD卡)</string>
     <string name="restrict_shell">Shell (指令, ROOT指令)</string>
@@ -103,24 +103,24 @@
     <string name="title_fpermission">程式要求手機權限</string>
     <string name="title_frestricted">已被限制程式</string>
     <string name="title_fuser">顯示使用者app</string>
-    <string name="title_fondemand">Filter by on-demand</string>
+    <string name="title_fondemand">使用互動式限制</string>
     <string name="title_fsystem">顯示系統app</string>
-    <string name="title_fnot">←反選(無限制程式)</string>
+    <string name="title_fnot">←相反選擇</string>
     <string name="title_sname">名稱</string>
     <string name="title_suid">UID</string>
     <string name="title_sinstalled">安裝日期</string>
     <string name="title_supdated">更新日期</string>
     <string name="title_smodified">修改日期 (XPrivacy)</string>
     <string name="title_sinvert">反序排列</string>
-    <string name="title_attempt">Usage attempt of:</string>
-    <string name="title_category">Category:</string>
-    <string name="title_function">Function:</string>
-    <string name="title_parameters">Parameters:</string>
-    <string name="title_applycat">Apply to entire category</string>
-    <string name="title_once">Once for %1$s seconds</string>
+    <string name="title_attempt">本程式嘗試存取：</string>
+    <string name="title_category">分類：</string>
+    <string name="title_function">功能：</string>
+    <string name="title_parameters">參數：</string>
+    <string name="title_applycat">套用至整個限制分類</string>
+    <string name="title_once"> %1$s 秒後再次詢問</string>
     <string name="title_allow">允許</string>
     <string name="title_deny">封鎖</string>
-    <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
+    <string name="title_pleasesubmit">稍後請上傳您的設定到社群網路利人利己 :)</string>
     <string name="settings_serial">序號</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">經度</string>
@@ -132,34 +132,34 @@
     <string name="settings_adid">個人化廣告識別碼</string>
     <string name="settings_country">國家</string>
     <string name="settings_operator">電信商</string>
-    <string name="settings_subscriber">簽約者 ID</string>
+    <string name="settings_subscriber">IMSI</string>
     <string name="settings_ua">User agent</string>
     <string name="settings_general">一般設定</string>
     <string name="settings_fake_data">偽造資訊設定</string>
     <string name="settings_notify">APP更新時顯示通知</string>
-    <string name="settings_ondemand">互動式限制設定</string>
+    <string name="settings_ondemand">開啟互動式限制設定</string>
     <string name="settings_log">偵錯日誌 (需重新啟動)</string>
     <string name="settings_expert">進階模式</string>
     <string name="settings_dangerous">關閉高風險功能</string>
     <string name="settings_confidence">最大擷取信賴區間</string>
     <string name="settings_experimental">實驗性功能 (需重新啟動)</string>
     <string name="settings_https">使用加密連線 (HTTPS)</string>
-    <string name="settings_syscomponents">允許限制系統元件(Android)(需重新啟動)</string>
+    <string name="settings_syscomponents">可限制安卓系統元件(需重新啟動)</string>
     <string name="settings_usagedata">開啟操作記錄(需重新啟動)</string>
-    <string name="help_longpress">Long press name to select</string>
-    <string name="help_ondemand">restrictions will be asked</string>
-    <string name="help_application">程式</string>
+    <string name="help_longpress">長按程式名稱可選取</string>
+    <string name="help_ondemand">存取該權限時詢問</string>
+    <string name="help_application">程式名稱</string>
     <string name="help_internet">表示有網際網路權限</string>
     <string name="help_granted">表示有手機權限</string>
     <string name="help_used">表示app曾取得過資訊</string>
-    <string name="help_used_grayed">目前無操作記錄</string>
+    <string name="help_used_grayed">表示無法記錄操作</string>
     <string name="help_frozen">表示app已凍結/停用</string>
     <string name="help_dangerous">不建議限制</string>
     <string name="help_half">只有限制部分權限</string>
     <string name="help_attention">限制時需特別注意</string>
     <string name="help_restricted">規則已變更</string>
     <string name="help_shared">規則已上傳</string>
-    <string name="tutorial_mainheader">Select the category to restrict</string>
+    <string name="tutorial_mainheader">選擇要限制的權限分類</string>
     <string name="tutorial_mainlist">點選勾選框可封鎖APP使無法取得敏感資訊或功能權限\n
      \n當特定資訊被封鎖時，該APP會接收到假資料或空白資料\n
      \n點選APP圖示可針對該APP做細部規則設定</string>
